Proyectos y practicas/3º/PL/PL-Practica-Final-AJS/PL_P2_AGUILAR_RODRIGUEZ/tests/propios/validos/test7.symbol
SCOPE: global
Symbol(name='num', type='NUMBER_VALUE', value=3)
Symbol(name='a', type='BOOL_VALUE', value=True)
Symbol(name='casa', type='NUMBER_VALUE', value=12)

