Proyectos y practicas/3º/PL/PL-Practica-Final-AJS/PL_P2_AGUILAR_RODRIGUEZ/tests/propios/invalidos_semantico/test1.symbol
SCOPE: global
Symbol(name='a', type='NUMBER_VALUE', value=3)
Symbol(name='b', type='BOOL_VALUE', value=True)

